src/components/NewComponents/breadcrumbsDR/breadcrumbsDR.module.css
/* breadcrumbsDR.module.css */

.BreadcrumbsDR {
  background: #e5ffed;
  padding: 16px 0px 32px 0px;
  margin-top: 70px;
}

.BreadcrumbsInner {
  margin: 0 auto;
  max-width: 1200px;
  position: relative;
}

.autoContainer {
  width: 100%;
  box-sizing: border-box;
}

.innerContainer {
  display: flex;
  justify-content: space-between;
}

.pagePath {
  font-size: 16px;
}

.breadCrumbHome {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
}

.breadCrumbHome li a {
  display: inline-block;
  margin-right: 8px;
  color: var(--Light-Text-Secondary, #697386);
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 600;
}

.fontCapitalized {
  text-transform: capitalize;
}

.active {
  font-weight: bold;
  color: var(--Light-Text-Green, #008554);
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 600;
}

.arrowIcon {
  width: 16px;
  height: 16px;
  margin-right: 5px;
}

.separator {
  display: flex;
  align-items: center;
  margin-right: 5px;
}

@media screen and (max-width: 1250px) {
  .autoContainer {
    padding: 0px 20px;
  }
}

@media screen and (max-width: 590px) {
  .BreadcrumbsDR {
    padding: 26px 0px 24px 0px;
    margin-top: 78px;
  }
  .breadCrumbHome {
    flex-wrap: wrap;
  }

  .breadCrumbHome li a {
    font-size: 12px;
  }

  .arrowIcon {
    width: 16px;
    height: 16px;
  }

  .active {
    font-size: 12px;
    font-weight: bold;
  }
}

